サーバプロジェクトのビルド設定を変更する
*.js.map は生成しない
server.js のシングルファイルの出力

KiiCloud へアップロードファイルを変更
app.js -> server.js にしました

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ app/server/*/obj/
 app/server/*/Properties/
 app/server/*/*.js
 app/server/*/*.js.map
+app/server/*/gen/*.js
 
 # Tools
 tools/KiiCloud/setting.ini
