--- a/app/server/Contrib.Gate/Contrib.Gate.csproj
+++ b/app/server/Contrib.Gate/Contrib.Gate.csproj
@@ -84,6 +84,12 @@
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="application\entities\Player.ts" />
+    <TypeScriptCompile Include="application\protocol\CreateUser.ts" />
+    <TypeScriptCompile Include="application\protocol\FinishPrologue.ts" />
+    <TypeScriptCompile Include="application\protocol\GenRandom.ts" />
+    <TypeScriptCompile Include="application\protocol\Login.ts" />
+    <TypeScriptCompile Include="application\protocol\Ping.ts" />
+    <TypeScriptCompile Include="application\protocol\ServerDebug.ts" />
     <TypeScriptCompile Include="domain\util\Bucket.ts" />
     <TypeScriptCompile Include="domain\util\Random.ts" />
     <TypeScriptCompile Include="gen\CreateUser.ts" />
