インベントリストレージ作成
自販機が実行したら素材取得するようにします

--- a/app/server/Contrib.Gate/Contrib.Gate.csproj
+++ b/app/server/Contrib.Gate/Contrib.Gate.csproj
@@ -85,6 +85,7 @@
     <TypeScriptCompile Include="app.ts" />
     <TypeScriptCompile Include="application\entities\Ads.ts" />
     <TypeScriptCompile Include="application\entities\Identify.ts" />
+    <TypeScriptCompile Include="application\entities\Inventory.ts" />
     <TypeScriptCompile Include="application\entities\Player.ts" />
     <TypeScriptCompile Include="application\entities\Recipe.ts" />
     <TypeScriptCompile Include="application\entities\Vending.ts" />
