--- a/app/server/Contrib.Gate/Contrib.Gate.csproj
+++ b/app/server/Contrib.Gate/Contrib.Gate.csproj
@@ -88,6 +88,7 @@
     <TypeScriptCompile Include="application\entities\Dungeon.ts" />
     <TypeScriptCompile Include="application\entities\Egg.ts" />
     <TypeScriptCompile Include="application\entities\Familiar.ts" />
+    <TypeScriptCompile Include="application\entities\Hatch.ts" />
     <TypeScriptCompile Include="application\entities\Identify.ts" />
     <TypeScriptCompile Include="application\entities\Inventory.ts" />
     <TypeScriptCompile Include="application\entities\Level.ts" />
@@ -104,6 +105,8 @@
     <TypeScriptCompile Include="application\protocol\EggList.ts" />
     <TypeScriptCompile Include="application\protocol\FinishPrologue.ts" />
     <TypeScriptCompile Include="application\protocol\Hatch.ts" />
+    <TypeScriptCompile Include="application\protocol\HatchList.ts" />
+    <TypeScriptCompile Include="application\protocol\HatchReserve.ts" />
     <TypeScriptCompile Include="application\protocol\Inventory.ts" />
     <TypeScriptCompile Include="application\protocol\Login.ts" />
     <TypeScriptCompile Include="application\protocol\PetList.ts" />
@@ -125,6 +128,8 @@
     <TypeScriptCompile Include="gen\Entities.ts" />
     <TypeScriptCompile Include="gen\FinishPrologue.ts" />
     <TypeScriptCompile Include="gen\Hatch.ts" />
+    <TypeScriptCompile Include="gen\HatchList.ts" />
+    <TypeScriptCompile Include="gen\HatchReserve.ts" />
     <TypeScriptCompile Include="gen\Inventory.ts" />
     <TypeScriptCompile Include="gen\Login.ts" />
     <TypeScriptCompile Include="gen\PetList.ts" />
