--- a/app/server/Contrib.Gate/Contrib.Gate.csproj
+++ b/app/server/Contrib.Gate/Contrib.Gate.csproj
@@ -107,6 +107,7 @@
     <TypeScriptCompile Include="application\protocol\AdsEnd.ts" />
     <TypeScriptCompile Include="application\protocol\BattleBegin.ts" />
     <TypeScriptCompile Include="application\protocol\BattleEnd.ts" />
+    <TypeScriptCompile Include="application\protocol\BattleReward.ts" />
     <TypeScriptCompile Include="application\protocol\Cheat.ts" />
     <TypeScriptCompile Include="application\protocol\CreateUser.ts" />
     <TypeScriptCompile Include="application\protocol\EggList.ts" />
@@ -115,6 +116,7 @@
     <TypeScriptCompile Include="application\protocol\HatchList.ts" />
     <TypeScriptCompile Include="application\protocol\HatchReserve.ts" />
     <TypeScriptCompile Include="application\protocol\Inventory.ts" />
+    <TypeScriptCompile Include="application\protocol\Judgment.ts" />
     <TypeScriptCompile Include="application\protocol\Login.ts" />
     <TypeScriptCompile Include="application\protocol\PetList.ts" />
     <TypeScriptCompile Include="application\protocol\Ping.ts" />
@@ -131,6 +133,7 @@
     <TypeScriptCompile Include="gen\AdsEnd.ts" />
     <TypeScriptCompile Include="gen\BattleBegin.ts" />
     <TypeScriptCompile Include="gen\BattleEnd.ts" />
+    <TypeScriptCompile Include="gen\BattleReward.ts" />
     <TypeScriptCompile Include="gen\Cheat.ts" />
     <TypeScriptCompile Include="gen\CreateUser.ts" />
     <TypeScriptCompile Include="gen\EggList.ts" />
@@ -140,6 +143,7 @@
     <TypeScriptCompile Include="gen\HatchList.ts" />
     <TypeScriptCompile Include="gen\HatchReserve.ts" />
     <TypeScriptCompile Include="gen\Inventory.ts" />
+    <TypeScriptCompile Include="gen\Judgment.ts" />
     <TypeScriptCompile Include="gen\Login.ts" />
     <TypeScriptCompile Include="gen\PetList.ts" />
     <TypeScriptCompile Include="gen\Ping.ts" />
