--- a/app/server/Contrib.Gate/Contrib.Gate.csproj
+++ b/app/server/Contrib.Gate/Contrib.Gate.csproj
@@ -126,6 +126,7 @@
     <TypeScriptCompile Include="application\protocol\StageBegin.ts" />
     <TypeScriptCompile Include="application\protocol\StageMove.ts" />
     <TypeScriptCompile Include="application\protocol\UnitList.ts" />
+    <TypeScriptCompile Include="application\protocol\UnitUpdate.ts" />
     <TypeScriptCompile Include="application\protocol\Vending.ts" />
     <TypeScriptCompile Include="domain\network\ApiError.ts" />
     <TypeScriptCompile Include="domain\stage\StageHelper.ts" />
@@ -154,6 +155,7 @@
     <TypeScriptCompile Include="gen\StageBegin.ts" />
     <TypeScriptCompile Include="gen\StageMove.ts" />
     <TypeScriptCompile Include="gen\UnitList.ts" />
+    <TypeScriptCompile Include="gen\UnitUpdate.ts" />
     <TypeScriptCompile Include="gen\Vending.ts" />
     <TypeScriptCompile Include="infrastructure\GUID\GUID.ts" />
     <TypeScriptCompile Include="KiiCloud\Kii.d.ts" />
